--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ ul {
 .chilli-image {
     width: 25%;
     float: right;  
-    margin-right: 30px;
+    margin-left: 30px;
 }
 
 .contact-header {
