--- a/css/styles.css
+++ b/css/styles.css
@@ -51,41 +51,10 @@ hr {
     margin-bottom: 50Px;
 }
 
-/* NAVBAR */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(176, 220, 240);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 99;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: rgb(125, 135, 38);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: #111;
-  }
-  
-  .active {
-    background-color: rgb(125, 135, 38);
-    color: white;
-  }
+.nav-avatar {
+    height: 55px;
+    border-radius: 99px;
+}
 
 .header-text-subtitle {
     font-weight: normal;
@@ -183,24 +152,17 @@ ul {
 .browser-image {
     width: 25%;
     float: left;  
-    margin-right: 30px;
+    margin-right: 40px;
 }
 
-.browser-image-hidden {
-    opacity: 0;
-    width: 25%;
-    float: left;  
-    margin-right: 30px;
-}
+@media only screen and (max-width) {
 
-.browser-image:hover .browser-image-hidden{
-    opacity: 1;
 }
 
 .chilli-image {
     width: 25%;
     float: right;  
-    margin-left: 30px;
+    margin-left: 40px;
 }
 
 .contact-header {
