--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,12 @@ hr {
     border-radius: 99px;
 }
 
+@media only screen and (max-width: 600px) {
+    .nav-avatar {
+        display: none;
+    }
+}
+
 .header-text-subtitle {
     font-weight: normal;
 }
