--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,24 @@
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
 @import 'base/animations';
 @import 'base/base';
 @import 'base/reset';
 @import 'base/typography';
 
-@import 'abstracts/functions';
-@import 'abstracts/mixins';
-@import 'abstracts/variables';
+@import 'components/buttons';
+@import 'components/carousel';
+@import 'components/slider';
+
+@import 'layout/footer';
+@import 'layout/forms';
+@import 'layout/grid';
+@import 'layout/header';
+@import 'layout/navigation';
+@import 'layout/sidebar';
+
+
 
 
 h1 {
@@ -42,40 +54,19 @@ a {
     color: #11999E;
 }
 
+.contact-me a {
+    text-decoration: none;
+}
+
 hr {
     width: 100px;
     border-style: dotted none none;
     border-color: #e0e0e0;
-    border-width: 10px;
-    margin-bottom: 50Px;
+    border-width: 8px;
+    margin: 50px auto;
 }
 
-.navbar {
-    background-color: $color-light-blue;
-}
 
-span {
-    color: $color-white;
-}
-
-.nav-item {
-    color: $color-white;
-}
-
-.nav-avatar {
-    height: 55px;
-    border-radius: 99px;
-    animation-name: moveInTop;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-}
-
-@media only screen and (max-width: 600px) {
-    .nav-avatar {
-        height: 10px;
-        visibility: hidden;
-    }
-}
 
 
 .header-text-main {
@@ -208,27 +199,6 @@ span {
 
 .contact-header {
     font-size: 40px;
-}
-
-.btn {
-    background-color: $color-green;
-    border: none;
-    color: $color-white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 32px;
-    font-family: 'Montserrat', sans-serif;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-
-.btn:hover {
-    background-color: $color-orange;
-    color: $color-white;
 }
 
 .footer {
