--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+/*
+0 - 600px:          Phone
+600 - 900px:        Tablet portrait
+900 - 1200px:       Tablet landscape
+[1200 - 1800px]:    is where our normal styles apply
+1800px + :          Big desktop
+
+*/
+/*
+$breakpoints argument choices
+
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+*/
 @keyframes moveInTop {
   0% {
     opacity: 0;
@@ -235,10 +252,3 @@ hr {
 .social-images {
   height: 4%;
   margin-right: 10px; }
-
-/* CONTACT PAGE */
-.container {
-  display: grid;
-  gap: 3px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 40px 40 px; }
